# graphics

./: .gitmodules  AUTHORS.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  README.md  build.cmd  build.sh
.github/workflows/: build-auto.yml  build.yml
data/: pref.xml
data/extensions/aseprite-theme/: theme.xml
data/extensions/aseprite-theme/dark/: theme.xml
data/strings/: en.ini
src/: CMakeLists.txt
src/app/: app.cpp  ini_file.cpp  resource_finder.cpp  resource_finder.h
src/app/commands/: cmd_options.cpp
src/app/win/: file_associations.cpp  thumbnails.cpp  thumbnails.h
src/desktop/linux/: aseprite-thumbnailer  aseprite.desktop
src/desktop/osx/: Info.plist
src/desktop/win/: CMakeLists.txt  helpers.h
src/main/osx/: Info.plist
src/main/win/: resources_win32.rc
src/ver/: CMakeLists.txt  info.c
tests/: run-tests.sh
